[gd_scene load_steps=11 format=3 uid="uid://di3qv85piql4l"]

[ext_resource type="Script" path="res://game/objects/white_carrot.gd" id="1_me2mu"]
[ext_resource type="AudioStream" uid="uid://drbfi1vrqpr0q" path="res://assets/sfx/PickUp/Retro PickUp Coin 07.wav" id="4_73kbc"]
[ext_resource type="Texture2D" uid="uid://hm4qlki75dvy" path="res://assets/vfx/heart_animated_1.png" id="5_qnolj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m18j5"]
size = Vector2(16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1m24"]
atlas = ExtResource("5_qnolj")
region = Rect2(0, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_onvhs"]
atlas = ExtResource("5_qnolj")
region = Rect2(17, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5mwc"]
atlas = ExtResource("5_qnolj")
region = Rect2(34, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvykw"]
atlas = ExtResource("5_qnolj")
region = Rect2(51, 0, 17, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30l3"]
atlas = ExtResource("5_qnolj")
region = Rect2(68, 0, 17, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_f8wjm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1m24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onvhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5mwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvykw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d30l3")
}],
"loop": true,
"name": &"default",
"speed": 25.0
}]

[node name="WhiteCarrot" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_me2mu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_m18j5")

[node name="PickUpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_73kbc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f8wjm")
autoplay = "default"
frame_progress = 0.23163

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="PickUpSFX" to="." method="_on_pick_up_sfx_finished"]
